--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">Main Loading...</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
